# DNDAPIProject

./: CODE_QUALITY_REPORT.md  TEST_COVERAGE_REPORT.md  buildAll.sh  buildBackend.sh  buildFrontend.sh  docker-compose.yml  package-lock.json  package.json  quasar.config.ts  testAll.sh  testE2E.sh  testUnit.sh  tsconfig.json  wdio.conf.ts
back-end/: CMakeLists.txt  Dockerfile  ENV.sample  README.md  build.sh  docker-compose.yml  generate_protos.sh  package-lock.json  package.json
back-end/include/: api_client.h  dnd5e_service.h  search_engine.h  server.h
back-end/proto/: dnd5e.proto
back-end/sql/init/: 001_init.sql
back-end/src/: api_client.cpp  dnd5e_service.cpp  main.cpp  search_engine.cpp  server.cpp
docker/nginx/: Dockerfile  nginx.conf
scripts/: test-e2e.js  test-integration.js
simulator/: sim.js
src/boot/: dnd5e.ts
src/components/: ErrorBoundary.vue  WebGlDemo.vue
src/layouts/: MainLayout.vue
src/pages/: DndDetailPage.vue  DndListPage.vue  EndpointsPage.vue  IndexPage.vue
src/router/: routes.ts
src/stores/: dnd5e.spec.ts  dnd5e.ts
src/utils/: grpcClient.ts
test/e2e/: dnd.e2e.ts  wdio-globals.d.ts
test/vitest/__tests__/api/: data-integrity.test.ts
test/vitest/__tests__/backend/: grpc.integration.test.ts
test/vitest/__tests__/pages/: DndListPage.test.ts  IndexPage.test.ts
test/vitest/__tests__/store/: dnd5e.test.ts
